update fitur kalkulator

--- a/src/pages/tools/kalkulator-cuti-proporsional.astro
+++ b/src/pages/tools/kalkulator-cuti-proporsional.astro
@@ -1,8 +1,8 @@
 ---
 import Layout from "../../layouts/Layout.astro";
-import CostPerHireCalculator from "../../components/tools/kalkulator-cuti-proporsional.jsx";
+import CutiProporsional from "../../components/tools/kalkulator-cuti-proporsional.jsx";
 ---
 
 <Layout>
-  <cutiproporsional client:load />
+  <CutiProporsional client:load />
 </Layout>
